--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
                     <ul class="contact-details">
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:23765a5408@lbrce.ac.in">23765a5408@lbrce.ac.in</a>
+                            <a href="mailto:bhavishyabavi754@gmail.com">bhavishyabavi754@gmail,com</a>
                         </li>
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
